--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -24,7 +24,7 @@
  CAN_UK_autonomy_puppet:0 "캐나다"
  CAN_UK_autonomy_integrated_puppet:0 "영국령 북아메리카"
  CAN_UK_autonomy_dominion_DEF:0 "캐나다"
- CAN_UK_autonomy_colony_DEF:0 "캐나다 연합"
+ CAN_UK_autonomy_colony_DEF:0 "캐나다 연방"
  CAN_UK_autonomy_puppet_DEF:0 "캐나다"
  CAN_UK_autonomy_integrated_puppet_DEF:0 "영국령 북아메리카"
  USA_UK_autonomy_dominion:0 "북아메리카 자치령"
