--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1208,8 +1208,8 @@
  ETH_democratic_DEF:0 "에티오피아 연방민주공화국"
  ETH_neutrality:0 "에티오피아"
  ETH_neutrality_DEF:0 "에티오피아"
- ETH_communism:0 "에티오피아 민주주의인민공화국"
- ETH_communism_DEF:0 "에티오피아 민주주의인민공화국"
+ ETH_communism:0 "에티오피아 민주인민공화국"
+ ETH_communism_DEF:0 "에티오피아 민주인민공화국"
  ETH_fascism_ADJ:0 "에티오피아"
  ETH_democratic_ADJ:0 "에티오피아"
  ETH_neutrality_ADJ:0 "에티오피아"
@@ -1676,8 +1676,8 @@
  ANG_democratic_DEF:0 "앙골라 공화국"
  ANG_neutrality:0 "앙골라"
  ANG_neutrality_DEF:0 "앙골라"
- ANG_communism:1 "앙골라 민주주의인민공화국"
- ANG_communism_DEF:0 "앙골라 민주주의인민공화국"
+ ANG_communism:1 "앙골라 민주인민공화국"
+ ANG_communism_DEF:0 "앙골라 민주인민공화국"
  ANG_fascism_ADJ:0 "앙골라"
  ANG_democratic_ADJ:0 "앙골라"
  ANG_neutrality_ADJ:0 "앙골라"
@@ -1785,8 +1785,8 @@
  ERI_democratic_DEF:0 "에리트레아"
  ERI_neutrality:1 "에리트레아 왕국"
  ERI_neutrality_DEF:1 "에리트레아 왕국"
- ERI_communism:1 "에리트레아 민주주주의인민공화국"
- ERI_communism_DEF:1 "에리트레아 민주주주의인민공화국"
+ ERI_communism:1 "에리트레아 민주인민공화국"
+ ERI_communism_DEF:1 "에리트레아 민주인민공화국"
  ERI_fascism_ADJ:0 "에리트레아"
  ERI_democratic_ADJ:0 "에리트레아"
  ERI_neutrality_ADJ:0 "에리트레아"
@@ -1807,8 +1807,8 @@
  SOM_fascism_DEF:1 "아주란 제국"
  SOM_democratic:0 "소말리아"
  SOM_democratic_DEF:0 "소말리아"
- SOM_neutrality:1 "소말리 술탄국"
- SOM_neutrality_DEF:1 "소말리 술탄국"
+ SOM_neutrality:1 "소말리아 술탄국"
+ SOM_neutrality_DEF:1 "소말리아 술탄국"
  SOM_communism:1 "소말리 민주공화국"
  SOM_communism_DEF:1 "소말리 민주공화국"
  SOM_fascism_ADJ:1 "아주란"
@@ -1845,8 +1845,8 @@
  BRD_democratic_DEF:0 "부룬디"
  BRD_neutrality:1 "부룬디 왕국"
  BRD_neutrality_DEF:1 "부룬디 왕국"
- BRD_communism:1 "부룬디 민주주주의인민공화국"
- BRD_communism_DEF:1 "부룬디 민주주주의인민공화국"
+ BRD_communism:1 "부룬디 민주인민공화국"
+ BRD_communism_DEF:1 "부룬디 민주인민공화국"
  BRD_fascism_ADJ:0 "부룬디"
  BRD_democratic_ADJ:0 "부룬디"
  BRD_neutrality_ADJ:0 "부룬디"
@@ -1953,8 +1953,8 @@
  CHA_democratic_DEF:1 "차드 공화국"
  CHA_neutrality:0 "차드"
  CHA_neutrality_DEF:0 "차드"
- CHA_communism:1 "차드 민주주주의인민공화국"
- CHA_communism_DEF:1 "차드 민주주주의인민공화국"
+ CHA_communism:1 "차드 민주인민공화국"
+ CHA_communism_DEF:1 "차드 민주인민공화국"
  CHA_fascism_ADJ:1 "사헬"
  CHA_democratic_ADJ:0 "차드"
  CHA_neutrality_ADJ:0 "차드"
@@ -2049,8 +2049,8 @@
  SIE_democratic_DEF:0 "시에라리온"
  SIE_neutrality:1 "시에라리온 왕국"
  SIE_neutrality_DEF:1 "시에라리온 왕국"
- SIE_communism:1 "시에라리온 민주주주의인민공화국"
- SIE_communism_DEF:1 "시에라리온 민주주주의인민공화국"
+ SIE_communism:1 "시에라리온 민주인민공화국"
+ SIE_communism_DEF:1 "시에라리온 민주인민공화국"
  SIE_fascism_ADJ:0 "시에라리온"
  SIE_democratic_ADJ:0 "시에라리온"
  SIE_neutrality_ADJ:0 "시에라리온"
@@ -2085,8 +2085,8 @@
  SEN_democratic_DEF:0 "세네갈"
  SEN_neutrality:1 "졸로프국"
  SEN_neutrality_DEF:1 "졸로프국"
- SEN_communism:1 "세네갈 민주주주의인민공화국"
- SEN_communism_DEF:1 "세네갈 민주주주의인민공화국"
+ SEN_communism:1 "세네갈 민주인민공화국"
+ SEN_communism_DEF:1 "세네갈 민주인민공화국"
  SEN_fascism_ADJ:0 "세네갈"
  SEN_democratic_ADJ:0 "세네갈"
  SEN_neutrality_ADJ:1 "월로프"
@@ -2145,8 +2145,8 @@
  NMB_democratic_DEF:0 "나미비아"
  NMB_neutrality:1 "남서아프리카국"
  NMB_neutrality_DEF:1 "남서아프리카국"
- NMB_communism:1 "나미비아 민주주주의인민공화국"
- NMB_communism_DEF:1 "나미비아 민주주주의인민공화국"
+ NMB_communism:1 "나미비아 민주인민공화국"
+ NMB_communism_DEF:1 "나미비아 민주인민공화국"
  NMB_fascism_ADJ:0 "나미비아"
  NMB_democratic_ADJ:0 "나미비아"
  NMB_neutrality_ADJ:1 "남서아프리카"
@@ -2217,8 +2217,8 @@
  SLV_democratic_DEF:1 "슬로베니아 공화국"
  SLV_neutrality:0 "슬로베니아"
  SLV_neutrality_DEF:0 "슬로베니아"
- SLV_communism:1 "슬로베니아 민주주의인민공화국"
- SLV_communism_DEF:1 "슬로베니아 민주주의인민공화국"
+ SLV_communism:1 "슬로베니아 민주인민공화국"
+ SLV_communism_DEF:1 "슬로베니아 민주인민공화국"
  SLV_fascism_ADJ:0 "슬로베니아"
  SLV_democratic_ADJ:0 "슬로베니아"
  SLV_neutrality_ADJ:0 "슬로베니아"
@@ -2329,10 +2329,10 @@
  KYR_communism_ADJ:1 "키르기스"
  MAD_fascism:1 "이메리나 제국"
  MAD_fascism_DEF:1 "이메리나 제국"
- MAD_democratic:0 "마다가스카르"
- MAD_democratic_DEF:0 "마다가스카르"
- MAD_neutrality:1 "마다가스카르 공화국"
- MAD_neutrality_DEF:1 "마다가스카르 공화국"
+ MAD_democratic:0 "마다가스카르 공화국"
+ MAD_democratic_DEF:0 "마다가스카르 공화국"
+ MAD_neutrality:1 "마다가스카르"
+ MAD_neutrality_DEF:1 "마다가스카르"
  MAD_communism:1 "말라가시 인민공화국"
  MAD_communism_DEF:1 "말라가시 인민공화국"
  MAD_fascism_ADJ:1 "말라가시"
@@ -2542,8 +2542,8 @@
  CYP_democratic_DEF:1 "키프로스 공화국"
  CYP_neutrality:0 "키프로스"
  CYP_neutrality_DEF:0 "키프로스"
- CYP_communism:1 "키프로스 민주주주의인민공화국"
- CYP_communism_DEF:1 "키프로스 민주주주의인민공화국"
+ CYP_communism:1 "키프로스 민주인민공화국"
+ CYP_communism_DEF:1 "키프로스 민주인민공화국"
  CYP_fascism_ADJ:2 "키프로스"
  CYP_democratic_ADJ:0 "키프로스"
  CYP_neutrality_ADJ:0 "키프로스"
@@ -3185,23 +3185,23 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  RMN_fascism_DEF:0 "러시아령 만주국"
  RMN_fascism_ADJ:0 "만주국"
 
- BAL_democratic:0 "발트 연합 공국"
- BAL_democratic_DEF:0 "발트 연합 공국"
+ BAL_democratic:0 "발트 연합공국"
+ BAL_democratic_DEF:0 "발트 연합공국"
  BAL_democratic_ADJ:0 "발트"
- BAL_conservatives:0 "발트 연합 공국"
- BAL_conservatives_DEF:0 "발트 연합 공국"
+ BAL_conservatives:0 "발트 연합공국"
+ BAL_conservatives_DEF:0 "발트 연합공국"
  BAL_conservatives_ADJ:0 "발트"
- BAL_neutrality:0 "발트 연합 공국"
- BAL_neutrality_DEF:0 "발트 연합 공국"
+ BAL_neutrality:0 "발트 연합공국"
+ BAL_neutrality_DEF:0 "발트 연합공국"
  BAL_neutrality_ADJ:0 "발트"
- BAL_fascism:0 "발트 연합 공국"
- BAL_fascism_DEF:0 "발트 연합 공국"
+ BAL_fascism:0 "발트 연합공국"
+ BAL_fascism_DEF:0 "발트 연합공국"
  BAL_fascism_ADJ:0 "발트"
- BAL_communism:0 "발트 연합 공국"
- BAL_communism_DEF:0 "발트 연합 공국"
+ BAL_communism:0 "발트 연합공국"
+ BAL_communism_DEF:0 "발트 연합공국"
  BAL_communism_ADJ:0 "발트"
- BAL_socialist:0 "발트 연합 공국"
- BAL_socialist_DEF:0 "발트 연합 공국"
+ BAL_socialist:0 "발트 연합공국"
+ BAL_socialist_DEF:0 "발트 연합공국"
  BAL_socialist_ADJ:0 "발트"
 
  QNG_fascism:0 "중국"
