--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -51,4 +51,6 @@
   ideology_boosting_democratic:0 "자유주의 인기도 증가"
   ideology_boosting_fascism:0 "국민주의 인기도 증가"
   ideology_boosting_communism:0 "공산주의 인기도 증가"
+  GER_influence_down_tt:0 "바이에른 영향력 증가"
+  GRK_influence_up_tt:0 "프로이센 영향력 증가"
  
