--- a/localisation/hun_localisation_l_english.yml
+++ b/localisation/hun_localisation_l_english.yml
@@ -5,7 +5,7 @@
  hung.1000.a:0 "사회주의자들은 이 나라에 안정을 가져다 줄 것이다."
  hung.1000.b:0 "마르크스주의자들은 헝가리의 꿈을 이룰 것이다."
  hung.1001.t:0 "미클로시 호르티의 처형"
- hung.1001.d:0 "국민주의적인 해군 사령관, 미클로시 호르티는 우리가 보수정부를 타도한 이후 추종자들과 함께 숨어 있었습니다. 그는 내전을 일으키기 위해 충성을 다했던 옛 군대를 모을 계획이었던 것으로 보입니다. 다행히도 그는 아군에 의해 사전에 발견되었습니다. 벨라 쿤은 새 공화국을 위해서는 그를 살려 두는 것이 너무 위험하다고 결정했습니다. 그래서 그는 처형될 것입니다."
+ hung.1001.d:0 "국민주의적인 해군 사령관, 미클로시 호르티는 우리가 보수정부를 타도한 이후 추종자들과 함께 숨어 있었습니다. 그는 내전을 일으키기 위해 충성을 다했던 옛 군대를 모을 계획이었던 것으로 보입니다. 다행히도 그는 아군에 의해 사전에 발견되었습니다. 벨러 쿤은 새 공화국을 위해서는 그를 살려 두는 것이 너무 위험하다고 결정했습니다. 그래서 그는 처형될 것입니다."
  hung.1001.a:0 "그 개자식을 교수형에 처해라." 
  hung.1002.t:0 "오토 폰 합스부르크 암살"
  hung.1002.d:0 "현재 오스트리아국은 신생 헝가리 공화국에 가장 큰 위협이 되고 있습니다. 그들의 나라는 잃어버린 땅을 되찾기를 열망하고 있고 헝가리는 그것의 일부입니다. 오스트리아를 상대로 더 나은 기회를 갖기 위해 우리는 그들이 가장 사랑하는 군주를 죽임으로써 그들의 나라를 불안정하게 해야 합니다. 새로 구성된 국가 보호국이 이번 암살을 실행할 예정입니다."
