--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -1,21 +1,21 @@
 ﻿l_english:
- LOADING_TIP_0:0 ""
- LOADING_TIP_1:0 ""
+ LOADING_TIP_0:0 "전쟁이 아무리 필요하거나 정당하다고 해도 범죄가 아니라고 절대 생각하지 말라.\n- 어니스트 헤밍웨이"
+ LOADING_TIP_1:0 "서로 싸우는 두 군대는 마치 자살하는 하나의 큰 군대와 같다.\n- 앙리 바르뷔스"
  LOADING_TIP_2:0 "아무리 작은 싸움도 큰 그림을 이루는 일부임을, 전투로 나서려는 모든 군인은 알아야만 한다.\n- 버나드 L. 몽고메리"
- LOADING_TIP_3:0 ""
+ LOADING_TIP_3:0 "나는 이 전쟁을 사랑하기 때문에 저주가 내게 쉬어야 한다고 생각한다. 나는 전쟁이 매 순간 수천 명의 삶을 산산조각 내고 있다는 것을 알고 있지만, 나는 어쩔 수 없다. 나는 매 초마다 전쟁을 즐긴다.\n- 윈스턴 처칠"
  LOADING_TIP_4:0 "타인을 믿는 것은 좋지만, 안 믿는 것은 더 좋다.\n- 베니토 무솔리니"
- LOADING_TIP_5:0 ""
+ LOADING_TIP_5:0 "전시에 애국이라는 단어는 진리의 억압을 의미한다.\n- 시그프리드 서순"
  LOADING_TIP_6:0 "곰은 사랑스러운 생물이다."
  LOADING_TIP_7:0 "강력한 국력을 지닌 주권국이 있는 한, 전쟁은 불가피하다.\n- 알버트 아인슈타인"
- LOADING_TIP_8:0 ""
- LOADING_TIP_9:0 ""
- LOADING_TIP_10:0 ""
- LOADING_TIP_11:0 ""
- LOADING_TIP_12:0 ""
- LOADING_TIP_13:0 "전쟁이 목적이 아니라면 어떤 동맹도 무의미하며 무가치하다.\n- 아돌프 히틀러"
- LOADING_TIP_14:0 "위대한 거짓말쟁이들은 위대한 마법사들이다.\n- 아돌프 히틀러"
- LOADING_TIP_15:0 "만약 내가 오늘 혁명가로서 여기 서게 된다면, 그것은 혁명에 맞선 혁명가로서다.\n- 아돌프 히틀러"
- LOADING_TIP_16:0 "큰 거짓말이 잦아지면 곧 사실이 될 것이다.\n- 아돌프 히틀러"
+ LOADING_TIP_8:0 "후회하지 않는 유일한 승리는 무지를 넘어 얻은 승리들이다.\n- 나폴레옹 보나파르트"
+ LOADING_TIP_9:0 "내 삶의 목표는 군주제의 전복이다.\n- 카를 리프크네히트"
+ LOADING_TIP_10:0 "자본주의에게 전쟁과 평화는 그저 사업에 불과하다.\n- 카를 리프크네히트"
+ LOADING_TIP_11:0 "그녀를 허물어 버려라.\n- 베를린 전승기념탑의 꼭대기에 있는 빅토리아에 대해 말하는 에른스트 톨러"
+ LOADING_TIP_12:0 "프랑스인들은 정말 모두 겁쟁이다.\n - 라인 연합을 떠나는 프랑스인들에 대해 말하는 에두아르드 다비드"
+ LOADING_TIP_13:0 "세르비아인들이여, 온 힘을 다해 집과 세르비아 국가를 지켜라!\n- 세르비아 왕국군의 최고 사령관, 섭정 알렉산다르"
+ LOADING_TIP_14:0 "나는 내가 믿을 수 없는 사람이라고 생각하지 않는다.\n- 벨러 쿤"
+ LOADING_TIP_15:0 "역사에서 배우는 것은 아무도 역사로부터 배우는 것이 없다는 것이다.\n- 오토 폰 합스부르크"
+ LOADING_TIP_16:0 "우리의 식민지에 문제가 있는 것 같다.\n- 시리아 폭동에 대한 소식을 받은 알베르 사라우트"
  LOADING_TIP_18:0 "성공은 열정을 잃지 않고 실패에서 실패로 전진하면서 이뤄진다.\n- 윈스턴 처칠"
  LOADING_TIP_19:0 "만약 지옥길을 걷고 있다면, 계속 전진하라.\n- 윈스턴 처칠"
  LOADING_TIP_20:0 "민주주의에 대한 최고의 반론은 평범한 유권자와의 5분 대화이다.\n- 윈스턴 처칠"
@@ -38,7 +38,7 @@
  LOADING_TIP_37:0 "땀을 흘려 피를 구하고, 피를 흘려 생명을 구하지만, 뛰어난 두뇌는 둘 다 구한다. \n- 에르빈 롬멜"
  LOADING_TIP_39:0 "나는 유럽의 평화와 안정은 이제 회복되었다고 믿는다.\n네빌 체임벌린, 독일 제국의 재통일 후."
  LOADING_TIP_40:0 "적 폭격기는 루르에 도달할 수 없다. 한 기라도 그럴 수 있다면 난 괴링이 아니다. 마이어라고 불러라.\n- 헤르만 괴링"
- LOADING_TIP_41:0 "이런 유능한 동맹국과 함께한다면 이 전쟁에서 질 수 없다. 빌헬름 3세, 일본의 진주만 습격에 대해 (1941년 12월)"
+ LOADING_TIP_41:0 "이렇게 유능한 동맹국과 함께라면 우리는 이 전쟁에서 질 수 없다." 일본의 블라디바스톡 공습에 대해 말하는 빌헬름 3세 (1941년 12월)"
  LOADING_TIP_42:0 "미국, 영국과 전쟁을 시작한 첫 6~12개월 간은 승리할 수 있을 것이다. 그 후에는, 성공을 장담할 수 없다.\n- 야마모토 이소로쿠"
  LOADING_TIP_43:0 "설령 지뢰밭을 마주쳐도, 우리의 보병들은 개의치 않고 공격할 것이다. \n- 게오르기 주코프"
  LOADING_TIP_44:0 "러시아의 거대함은 우리가 헤아릴 수가 없다... 사단 12개를 쳐부술 때마다 또 다른 사단 12개가 나타난다.\n- 프란츠 할더"
@@ -56,7 +56,7 @@
  LOADING_TIP_59:0 "다른 사람 모두를 폭격하지만 자신들은 폭격당하지 않을 것이라는, 약간 유치한 망상으로 스파르타시스트는 전쟁을 시작했다.\n- 아서 '폭격기' 해리스"
  LOADING_TIP_60:0 "만약 리프크네히트가 지옥을 침공한다면, 하원 의회에서 악마를 옹호할 수도 있다.\n- 윈스턴 처칠, 1941년 6월 21일"
  LOADING_TIP_62:0 "우리는 패전했다. 우리는 패배했고, 전투에서 졌다.\n-  폴 레노, 1940년 5월 15일"
- LOADING_TIP_63:0 "내게는 오직 나를 승리자로서 평화 회담에 출석시킬 수 있는 수천 명의 희생이 필요하다.\n- 베니토 무솔리니"
+ LOADING_TIP_63:0 "내가 왕위를 잃게 되는 것은 두렵지 않다. 만약 그렇게 된다면, 나는 미국에 가서 정비공으로 취직할 것이다.\n- 불가리아의 보리스 3세"
  LOADING_TIP_64:0 "프랑스인은 곧 공격할 것이라고 체코인을 속였다. 그럴 생각은 전혀 없음에도.\n- 에드먼드 아이언사이드"
  LOADING_TIP_66:0 "이 전쟁은 거짓같다.\n- 미 상원 의원 윌리엄 보라, 1939년"
  LOADING_TIP_68:0 "승리의 과실이 우리의 입안으로 너무나 빨리 들어오고 있소.\n- 덴노 히로히토"
@@ -78,3 +78,5 @@
  LOADING_TIP_84:0 "사람을 지키고, 땅을 잃으면 땅을 다시 되찾을 수 있지만. 땅을 지키고, 사람을 잃으면 땅과 사람 모두 잃는 것이다.\n- 마오쩌둥"
  LOADING_TIP_85:0 "나는 작은 루마니아의 낙원에서 살기보다 대루마니아의 늪지에서 죽기를 바란다.\n- 이온 안토네스쿠"
  LOADING_TIP_86:0 "국민들은 다른 무엇도 아닌, 무엇이 그들을 대표하는지만을 신경쓴다.\n- 이온 안토네스쿠"
+ LOADING_TIP_87:0 ""나의 장관들은 친독주의자, 내 아내는 친이탈리아, 내 국민은 친러주의자들이다. 나는 이 나라에서 유일한 중립이다."\n - 불가리아의 보리스 3세"
+ LOADING_TIP_88:0 "맥주를 진정으로 사랑하는 여자를 내게 주면 나는 세계를 정복할 것이다.\n - 카이저 빌헬름 2세"
