--- a/localisation/ser_focus_l_english.yml
+++ b/localisation/ser_focus_l_english.yml
@@ -7,7 +7,7 @@
  SER_embrace_socialism_desc:0 "군주제는 우리에게 오직 불행만을 가져다 주었습니다. 우리는 슬라브인들의 목숨을 앗아간 이기적인 국왕에 의해 전쟁에 휘말렸습니다. 이렇게 오랜 세월이 흘렀는데도 세르비아는 조금도 회복되지 않았습니다. 이 부패한 군주제를 무너뜨려야 하고 공산주의자들만이 그렇게 할 수 있습니다!"
  SER_workers_revoulution:0 "혁명을 시작하라"
  SER_workers_revoulution_desc:0 "사람들은 현재 우리의 체제의 의해 이용당하고 있습니다. 고용주들이 노조보다 호의를 받고 있습니다. 드디어 우리가 이 억압에 맞서야 할 때입니다! 세르비아의 노동자여, 단결하라!"
- SER_peoples_revoulution:0 "국왕 알렉산데르 추방"
+ SER_peoples_revoulution:0 "국왕 알렉산다르 추방"
  SER_peoples_revoulution_desc:0 "혁명이 거의 다 왔습니다. 국왕은 질서를 회복할 수 없고, 제독과 장군들도 우리와 합류하고 있으며, 바이에른 형제들은 우리에게 지원을 약속했습니다. 왕정이 흔들리기 시작했습니다! 왕을 끌어내리고 프롤레타리아를 높혀야 합니다!"
  SER_join_comintern:0 "코민테른 가입"
  SER_join_comintern_desc:0 "우리 바이에른 형제들은 우리 운동이 시작한 이래로 우리의 명분을 지지해 왔습니다. 두 나라 모두 국민을 해방시키려는 우리의 목표 때문에 주요국으로부터 위협을 받고 있습니다. 우리는 이데올로기의 생존을 위해 함께 뭉쳐야 합니다."
