--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -232,7 +232,7 @@
  STATE_231:0 "조지아"
  STATE_232:0 "그로즈니"
  STATE_233:0 "카프카스"
- STATE_234:0 "크라스노다르"
+ STATE_234:0 "예카테리노다르"
  STATE_235:0 "스타브로폴"
  STATE_236:0 "아스트라한"
  STATE_237:0 "옐리스타"
@@ -584,7 +584,7 @@
  STATE_583:0 "쿠스타나이"
  STATE_584:0 "아슈하바트"
  STATE_585:0 "우르겐치"
- STATE_586:0 "알마 아타"
+ STATE_586:0 "베르니"
  STATE_587:0 "우스튜르트"
  STATE_588:0 "세미팔라틴스크"
  STATE_589:0 "아야쿠스"
