--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -186,7 +186,7 @@
  VICTORY_POINTS_3151:0 "상트페테르부르크"
  VICTORY_POINTS_6474:0 "유좁카"
  VICTORY_POINTS_9417:0 "로스토프"
- VICTORY_POINTS_11375:0 "고르키"
+ VICTORY_POINTS_11375:0 "니즈니노브고로드"
  VICTORY_POINTS_117:0 "노브고로드"
  VICTORY_POINTS_121:0 "야로슬라블"
  VICTORY_POINTS_306:0 "스몰렌스크"
@@ -195,7 +195,7 @@
  VICTORY_POINTS_957:0 "블라디보스토크"
  VICTORY_POINTS_1278:0 "우파"
  VICTORY_POINTS_1459:0 "타슈켄트"
- VICTORY_POINTS_1591:0 "알마아타"
+ VICTORY_POINTS_1591:0 "베르니"
  VICTORY_POINTS_1599:0 "트빌리시"
  VICTORY_POINTS_1821:0 "예카테린부르크"
  VICTORY_POINTS_3134:0 "무르만스크"
@@ -581,8 +581,8 @@
  VICTORY_POINTS_6318:0 "맨체스터"
  VICTORY_POINTS_11405:0 "자포리자"
  VICTORY_POINTS_11561:0 "크리비리흐"
- VICTORY_POINTS_9461:0 "보로실로프그라드"
- VICTORY_POINTS_3734:0 "크라스노다르"
+ VICTORY_POINTS_9461:0 "루간스크"
+ VICTORY_POINTS_3734:0 "예카테리노다르"
  VICTORY_POINTS_11349:0 "르제프"
  VICTORY_POINTS_8011:0 "벵갈루루"
  VICTORY_POINTS_8087:0 "하이데라바드"
@@ -826,7 +826,7 @@
  VICTORY_POINTS_10312:0 "쿠스타나이"
  VICTORY_POINTS_11537:0 "우랄스크"
  VICTORY_POINTS_3618:0 "구리예프"
- VICTORY_POINTS_392:0 "울리야놉스크"
+ VICTORY_POINTS_392:0 "심비르스크"
  VICTORY_POINTS_9258:0 "펜자"
  VICTORY_POINTS_6269:0 "이바노보"
  VICTORY_POINTS_6398:0 "리페츠크"
@@ -930,4 +930,11 @@
  VICTORY_POINTS_12414:0 "언스"
  VICTORY_POINTS_12017:0 "화이화"
  VICTORY_POINTS_10472:0 "아르다한"
+ VICTORY_POINTS_3202:0 "블라디미르"
+ VICTORY_POINTS_9130:0 "플레세츠크"
+ VICTORY_POINTS_6961:0 "나홋카"
+ VICTORY_POINTS_6838:0 "우수리스크"
+ VICTORY_POINTS_12559:0 "니콜라옙스크나아무르"
+ VICTORY_POINTS_11523:0 "코자켄슈타트"
+ VICTORY_POINTS_6174:0 "가치나"
  
