--- a/localisation/ser_ideas_l_english.yml
+++ b/localisation/ser_ideas_l_english.yml
@@ -10,5 +10,5 @@
  SER_balkan_league:0 "발칸 동맹"
  SER_woman_soldiers:0 "여군"
  SER_workers_strikes:0 "노동자 파업"
- SER_alexander:0 "알렉산데르 1세"
+ SER_alexander:0 "알렉산다르 1세"
 
