--- a/localisation/bav_focus_l_english.yml
+++ b/localisation/bav_focus_l_english.yml
@@ -21,8 +21,8 @@
  BAV_young_army_desc:0 "바이에른 자국의 이익을 보호하기 위해 더 많은 사람들이 필요합니다. 우리는 더 많은 젊은이들이 군대에 입대하도록 격려해야 합니다."
  BAV_pru_wall:0 "동지들의 장벽"
  BAV_pru_wall_desc:0 "우리나라는 군주제와 압제적인 '민주주의'에 둘러싸여 있습니다. 북쪽에는 우리의 가장 큰 적 프로이센이 있습니다. 우리는 그것을 가로질러 요새선을 건설함으로써 우리의 국경을 지켜야 합니다."
- BAV_radar:0 "레이더 연구 지원"
- BAV_radar_desc:0 "러시아 정찰기가 주요 위치를 정찰하며 머리 위로 날아오고 있다는 보고가 들어오고 있습니다. 이 비행기들을 발견하고 이들이 뮌헨으로 날아들어오는 것을 막기 위해서 우리는 레이더 연구에 보조금을 지급해야 합니다."
+ BAV_radar:0 "레이다 연구 지원"
+ BAV_radar_desc:0 "러시아 정찰기가 주요 위치를 정찰하며 머리 위로 날아오고 있다는 보고가 들어오고 있습니다. 이 비행기들을 발견하고 이들이 뮌헨으로 날아들어오는 것을 막기 위해서 우리는 레이다 연구에 보조금을 지급해야 합니다."
  BAV_spartacus:0 "스파르타쿠스 계획"
  BAV_spartacus_desc:0 "우리는 이 전쟁에서 이길 마지막 수단, 스파르타쿠스 계획이 있습니다. 우리는 적에게 불을 지르고, 그들을 잿더미로 만들 것입니다. 이 무기를 사용하기 전에 잘 생각해야 합니다."
  BAV_socialist_science:0 "사회주의 과학"
