--- a/localisation/britain_focus_l_english.yml
+++ b/localisation/britain_focus_l_english.yml
@@ -39,8 +39,8 @@
   UK_forts_desc:0 "브리튼 제도는 정복자 윌리엄 시대 이후로 침략을 받지 않았습니다. 전 세계적으로 새로운 기술의 발전으로 인해, 항상 그렇지는 않을 수도 있습니다. 어떤 대가를 치르더라도 우리 섬을 지켜야 합니다."
   UK_fighter:0 "전투기 주력"
   UK_fighter_desc:0 "이 경비행기들은 적들의 하늘을 지배할 것입니다. 이것이 바로 우리가 원하는 것입니다."
-  UK_radar:0 "레이더"
-  UK_radar_desc:0 "적들이 공격해오기 전에 보고 들을 수 있는 새로운 레이더 체계를 연구하고 구축해야 합니다."
+  UK_radar:0 "레이다"
+  UK_radar_desc:0 "적들이 공격해오기 전에 보고 들을 수 있는 새로운 레이다 체계를 연구하고 구축해야 합니다."
   UK_tank:0 "기갑 주력"
   UK_tank_desc:0 "새로운 기갑사단으로 적의 전선을 쉽게 돌파할 것입니다."
   UK_motor:0 "차량화 주력"
