--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -331,7 +331,7 @@
  GER_found_the_kaiser_willhelm_institute:0 "카이저 빌헬름 협회 창설"
  GER_rocket_research:0 "로켓 연구"
  GER_rocket_research_desc:0 ""
- radar_research:0 "레이더 연구"
+ radar_research:0 "레이다 연구"
  GER_atom_research:0 "분더바페"
  GER_demand_holstein:0 "덴마크와의 전쟁"
  GER_demand_holstein_desc:0 "덴마크를 침공하는 것은 우리가 대전 후에 잃어버린 홀슈타인을 되찾을 수 있게 해줍니다. 또 덴마크라는 초인종을 바로 확보하고 스웨덴과의 교역도 확보할 수 있게 됩니다."
