--- a/localisation/rus_ideas_l_english.yml
+++ b/localisation/rus_ideas_l_english.yml
@@ -70,14 +70,14 @@
  alexander_kolchak:0 "알렉산드르 콜차크"
  RUS_pavel_argeyev:0 "파벨 아르게예프"
  RUS_boris_savinkov:0 "보리스 사빈코프"
- RUS_konovalov:0 "알렉산데르 코노발로프"
+ RUS_konovalov:0 "알렉산드르 코노발로프"
  RUS_yusupov:0 "펠릭스 유수포프"
  RUS_nabokov_jr_idea:0 "블라디미르 나보코프 주니어"
  RUS_kornilov_idea:0 "라르브 코르닐로프"
  RUS_krasnov:0 "표트르 크라스노프"
  RUS_konev_idea:0 "이반 코네프"
  RUS_isakov_idea:0 "이반 이사코프"
- RUS_vasilevsky_idea:0 "알렉산데르 바실렙스키"
+ RUS_vasilevsky_idea:0 "알렉산드르 바실렙스키"
  RUS_zhukov_idea:0 "게오르기 주코프"
  RUS_rokossovsky_idea:0 "콘스탄틴 로코솝스키"
  RUS_monarstyrev_idea:0 "네스토르 모나스티레프"
