--- a/localisation/sweden_focus_l_english.yml
+++ b/localisation/sweden_focus_l_english.yml
@@ -94,7 +94,7 @@ SWE_new_cruisers:0 "Cruiser Effort"
 SWE_new_cruisers_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
 SWE_flagship_for_navy:0 "Flagship Effort"
 SWE_flagship_for_navy_desc:0 "A navy needs something to be proud of. A new modern flagship is needed, as to set an example for the rest of our navy."
-SWE_new_submarines:0 "Submarine Effort"
+SWE_new_submarines:0 "잠수함 주력"
 SWE_new_submarines_desc:0 "Submarine warfare is the most exciting naval development since the invention of the torpedo boat. We would do well to not just protect against submarines, but also use them against enemy shipping."
 SWE_costal_raiders:0 "Coastal Raiders"
 SWE_costal_raiders_desc:0 "The many inlets of our great land are inviting targets for stealthy submarine attacks. An auxiliary force of coastal patrol ships will alert us to any danger."
