--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2127,8 +2127,8 @@
  NGR_democratic_ADJ:0 "니제르"
  NGR_neutrality_ADJ:0 "니제르"
  NGR_communism_ADJ:0 "니제르"
- MRT_fascism:1 "모리타니 칼리프국"
- MRT_fascism_DEF:1 "모리타니 칼리프국"
+ MRT_fascism:1 "모리타니 칼리파국"
+ MRT_fascism_DEF:1 "모리타니 칼리파국"
  MRT_democratic:1 "모리타니 공화국"
  MRT_democratic_DEF:1 "모리타니 공화국"
  MRT_neutrality:0 "모리타니"
@@ -3239,8 +3239,8 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  BUK_socialist_ADJ:0 "부하라"
  BUK_communism_ADJ:0 "부하라"
  
- ALG_fascism:1 "알제리 칼리프국"
- ALG_fascism_DEF:1 "알제리 칼리프국"
+ ALG_fascism:1 "알제리 칼리파국"
+ ALG_fascism_DEF:1 "알제리 칼리파국"
  ALG_democratic:1 "알제리 공화국"
  ALG_democratic_DEF:1 "알제리 공화국"
  ALG_neutrality:0 "알제리"
