--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -483,7 +483,7 @@
  OMA_neutrality_party:0 "알 사이드 왕조"
  SIK_communism_party:0 "CCP"
  SIK_communism_party_long:0 "중국 공산당"
- SIK_neutrality_party:0 "신장 군벌"
+ SIK_neutrality_party:0 "신강군벌"
  SIK_conservatives_party:0 "BS"
  SIK_conservatives_party_desc:0 "베이징 지지자"
  SIK_democratic_party:0 "KMT"
