--- a/localisation/rus_events_l_english.yml
+++ b/localisation/rus_events_l_english.yml
@@ -232,7 +232,7 @@
  russia.71.b:0 "공산주의 단체를 금지하라."
  
  russia.72.t:0 "모스코바에서의 파업!"
- russia.72.d:0 "공산주의 단체 금지 결정은 러시아의 두 번째 수도에 있는 많은 노동자들을 화나게 한 것 같습니다. 공산당과 사회주의당의 지원을 받아 노동자들은 거리로 나가 공정한 국민투표를 촉구합니다!"
+ russia.72.d:0 "공산주의 단체 금지 결정은 러시아의 두 번째 수도에 있는 많은 노동자들을 화나게 한 것 같습니다. 공산당과 사회주의당의 지원을 받아 노동자들은 거리로 나가 공정한 국민 투표를 촉구합니다!"
  russia.72.a:0 "공산주의 조직의 참여를 허용하라."
  russia.72.b:0 "이 일은 반드시 중단되어야 한다!"
  
@@ -241,13 +241,13 @@
  russia.73.a:0 "우리는 위험을 무릅쓸 수 없다. 협상해야 한다."
  russia.73.b:0 "경찰을 동원해서 무정부주의자들을 체포하라."
  
- russia.74.t:0 "국민투표 요구!"
+ russia.74.t:0 "국민 투표 요구!"
  russia.74.d:0 "각지에서 러시아 군주제에 반대하는 시위자들에 대한 우리의 탄압이 있은 후, 그들은 현 통치자인 러시아 차르가 퇴위해야 한다고 믿습니다. 새로운 공화국이 형성되어야 합니다!"
  russia.74.a:0 "받아들일 수 없다!"
  russia.74.b:0 "차르는 퇴위하라!"
  
  russia.75.t:0 "보수당 다수파가 승리하다"
- russia.75.d:0 "일련의 선거 후에 옥타브리스트(Oktyabrists)와 헌법-보수당으로 구성된 보수 연합이 과반수를 확보했습니다. 우리는 이제 미하일 2세 폐하에게 완전한 권한을 줄 것인지, 아니면 두마가 후원하는 총리에게 힘을 실어줄 것인지 선택할 수 있습니다."
+ russia.75.d:0 "일련의 선거 후에 10월당과 헌법-보수당으로 구성된 보수 연정이 과반수를 확보했습니다. 우리는 이제 미하일 2세 폐하에게 완전한 권한을 줄 것인지, 아니면 두마가 후원하는 총리에게 힘을 실어줄 것인지 선택할 수 있습니다."
  russia.75.a:0 "듣기 좋은 소리다!"
  
  russia.81.t:0 "산업 계획"
@@ -368,7 +368,7 @@
  russia_homeland.1.a:0 "케렌스키 휘하의 사회주의 공화국"
  russia_homeland.1.b:0 "막라코프 휘하의 진보당"
  russia_homeland.1.c:0 "나보코프 휘하의 입헌민주당"
- russia_homeland.1.e:0 "데니킨 휘하의 옥타브리스트"
+ russia_homeland.1.e:0 "데니킨 휘하의 10월당"
  
  russia_homeland.2.t:0 "불만족스러워 하는 대중"
  russia_homeland.2.d:0 "E.I.V. 미하일 2세는 죽은 동생 니콜라이의 독재정치의 길을 추구하기로 결정했습니다. 당연히 이것은 대중을 화나게 했고 차르의 지지율은 떨어졌습니다. 이를 바꾸기 위해 우리 고문들은 상황과 여론을 개선하기 위해 언론에 익명으로 뇌물을 줄 것을 제안합니다."
