--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -183,7 +183,7 @@
  STATE_182:0 "크레타"
  STATE_183:0 "키프로스"
  STATE_184:0 "트라키아"
- STATE_185:0 "에피루스"
+ STATE_185:0 "이피로스"
  STATE_186:0 "펠로폰네소스"
  STATE_187:0 "에게해 제도"
  STATE_188:0 "메멜"
