--- a/localisation/sweden_focus_l_english.yml
+++ b/localisation/sweden_focus_l_english.yml
@@ -90,7 +90,7 @@ SWE_svenska_marinen:0 "Svenska Marinen"
 SWE_svenska_marinen_desc:0 "The expansion of our navy should be our first priority. Assign all available resources to new Dockyards and research into light surface ships."
 SWE_expand_swedish_dockyards:0 "Expand Swedish Dockyards"
 SWE_expand_swedish_dockyards_desc:0 "To truly rebuild a navy worthy of note, we must greatly expand our shipbuilding capacity."
-SWE_new_cruisers:0 "Cruiser Effort"
+SWE_new_cruisers:0 "순양함 주력"
 SWE_new_cruisers_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
 SWE_flagship_for_navy:0 "Flagship Effort"
 SWE_flagship_for_navy_desc:0 "A navy needs something to be proud of. A new modern flagship is needed, as to set an example for the rest of our navy."
