--- a/localisation/sweden_events_l_english.yml
+++ b/localisation/sweden_events_l_english.yml
@@ -2,11 +2,11 @@
 
 ### Events ###
 
-sweden.0.t:0 "The Kingdom of Sweden"
+sweden.0.t:0 "스웨덴 왕국"
 sweden.0.d:0 "The Kingdom of Sweden have, since the Napoleonic wars, been mostly neutral in the European theater. The last half of the 19th century saw Sweden modernize. But the time leading up to the great war also saw Norway gain their independence, weakening the Swedish influence in Scandinavia. \n\nAfter the Great War, Sweden became a regional industrial power, with steel and other resources being found in the country. The war affected Sweden somewhat, with rationing of food being introduced in the country from 1916 to 1917. The 1910s and 1920s also saw the socialist Socialdemokraterna gain more popularity, but Swedish politics was still dominated by liberals and conservatives in this era. \n\n1936, sees a Sweden that continues on the path of neutrality, but that might not be for forever. Gösta Bagge, from the conservative Allmänna Valmansförbundet, will be prime minister, under his majesty, King Gustaf V. The conservatives does however not hold a majority in the Riksdag, with agreements with the liberal Folkpartiet being necessary. The current system of government is not entirely secured. With socialists, wanting a Swedish Republic, on the one side, and nationalists, wanting a new Swedish Empire, on the other, gaining more support in the public."
 sweden.0.a:0 "För Sverige – i tiden"
 
-sweden.1.t:0 "Anti-Government Protest"
+sweden.1.t:0 "반정부 시위"
 sweden.1.d:0 "There have been news about protests against the conservative government. On the one side, many wants a socialist government, while on the other, there are many that believes the government have not done enough conservative and nationalist reforms."
 sweden.1.a:0 "They Can Use the Election for This Opposition"
 
@@ -14,7 +14,7 @@ sweden.2.t:0 "'Kungen Kommer' Have Been Released"
 sweden.2.d:0 "The comedy film 'Kungen Kommer' have just recently been released in Sweden. The film are directed by Ragnar Hyltén-Cavallius, and are about an aristocratic family that awaits a visit of king Karl XV. But when one of the characters in the movie finds out that the king have cancelled his trip, he hires an actor, that resemble the king a great deal, to play king Carl. \n\nThe film have been given above avarage reviews, with king Gustaf planning to go and see it."
 sweden.2.a:0 "Hope That it is a Good One"
 
-sweden.3.t:0 "Election Campaigns Have Begun in Sweden"
+sweden.3.t:0 "스웨덴에서 시작된 선거운동"
 sweden.3.d:0 "With the 1936 general election around the courner, the election campaigns for many political parties have begun. Posters have already been hanged up in many cities over our country, and many are out on the streets to influence people to vote for their party."
 sweden.3.a:0 "This Sounds Great"
 
@@ -32,19 +32,19 @@ sweden.6.t:0 "Bertil Ohlin Questions the Monarch's Influence"
 sweden.6.d:0 "The leader of the youth party to Folkpartiet, Bertil Ohlin, have begun to influence Folkpartiet in taking a more anti-monarchistic root. He, with many of his supporters, have put pressure on the leadership of the party to adopt a position where the monarch's influence shall be removed, so long it does not mean that the monarch himself will be removed. The conservatives are worried that Ohlin would make Folkpartiet go further left, maybe even support the socialists. This will, without question make the relations between liberals and conservatives more tense."
 sweden.6.a:0 "Hopefully We Can Figure This Out"
 
-sweden.7.t:0 "The 1936 General Election"
+sweden.7.t:0 "1936년 총선거"
 sweden.7.d:0 "The 1936 general election for the second chamber of the Riksdag is finally here. After weeks and months of political campaigns and rallies, the people are finally out to vote. It seems like it is going to be a good election day. \n\nWhile there are a lot of parties participating in the election, there is really just three that haves a shoot in gaining a plurality. It is the socialist Socialdemokraterna, a party that wants to build a Swedish welfare state, with a stronger public sector, and a fairer society for all swedes. They are also somewhat republican. Then there are the liberal Folkpartiet, a party that wants more individual rights and a weaker role for the monarch. Generally split between social liberals and classical liberals. Then there is the conservative Allmänna Valmansförbundet, the current governing party. They want to retain the influence of the monarch and the church, and favour that there is generally no changes in society. \n\nWith the voting stations begining to close down, there is to see what party have gained a plurality."
 sweden.7.a:0 "Allmänna Valmansförbundet Holds on to Their Plurality!"
 sweden.7.b:0 "Folkpartiet Manages to Gain a Plurality"
 sweden.7.c:0 "Socialdemokraterna Manages to Gain a Plurality"
 
-sweden.19.t:0 "The 1940 General Election"
+sweden.19.t:0 "1940년 총선거"
 sweden.19.d:0 "The 1940 general election for the second chamber of the Riksdag is finally here. Like the previous election, there seems to be three parties that can manage to achieve a plurality, the socialist Socialdemokraterna, the liberal Folkpartiet and the conservative Allmänna Valmansförbundet."
 sweden.19.a:0 "Allmänna Valmansförbundet Gains a Plurality"
 sweden.19.b:0 "Folkpartiet Gains a Plurality"
 sweden.19.c:0 "Socialdemokraterna Gains a Plurality"
 
-sweden.20.t:0 "The 1944 General Election"
+sweden.20.t:0 "1944년 총선거"
 sweden.20.d:0 "The 1944 general election for the second chamber of the Riksdag is finally here. Like the previous election, there seems to be three parties that can manage to achieve a plurality, the socialist Socialdemokraterna, the liberal Folkpartiet and the conservative Allmänna Valmansförbundet."
 sweden.20.a:0 "Allmänna Valmansförbundet Gains a Plurality"
 sweden.20.b:0 "Folkpartiet Gains a Plurality"
@@ -85,7 +85,7 @@ sweden.15.t:0 "Nationalists Counter the Socialists"
 sweden.15.d:0 "Since the socialists have recently armed themselves, the right-wing nationalists have begun to do that themself. This in order to counter any socialist revolutions taking place in Sweden. But overall, this only makes the situation more tense."
 sweden.15.a:0 "Not Them Too"
 
-sweden.16.t:0 "The Socialist Coup"
+sweden.16.t:0 "사회주의 쿠데타"
 sweden.16.d:0 "The socialists have now managed to gather enought forces and popular support to try ahieving a coup. Today, the royal palace and the Riksdag was attacked and bearly captured. The government need to call upon the help of the military or the nationalists. If not the socialists will succeed in their coup."
 sweden.16.a:0 "The Government Gives in to the Socialists"
 sweden.16.b:0 "The Military Defeats the Coup"
@@ -95,127 +95,127 @@ sweden.17.t:0 "The Government Hands Power to the King's Party"
 sweden.17.d:0 "In order to restabalize Sweden, the government have choosen to hand power to the King's Party. While the King's Party is not a party like any other, it is a group made up of Sweden's generals and aristocrats. They might be sufficient to asure the survival of Sweden."
 sweden.17.a:0 "They Might Make Order in This"
 
-sweden.18.t:0 "The Nationalists March on Stockholm"
+sweden.18.t:0 "스톡홀름으로 진군하는 국민주의자들"
 sweden.18.d:0 "While the socialists have been pushed back, there do seem like the nationalists are not going to back down. Now, they have betrayed our government with an march on the capital. They demand us step aside and let them rule the country. Many in the military have already deserted over to them, and with that, we only got option left."
 sweden.18.a:0 "We Have to Agree to Their Demands"
 
-sweden.50.t:0 "The Monarchy Referendum"
-sweden.50.d:0 "Our socialist government will not let the king retain so much influence as he today does. But we would have to see where the future of Sweden lies through a referendum. Either we can get a republic without a king, or we could get a real constitutional monarchy. With the votes being counted, it seems that this referendum could fall on either side."
-sweden.50.a:0 "The People Wants an Republic"
-sweden.50.b:0 "The People Wants a Constitutional Monarchy"
+sweden.50.t:0 "군주제 국민 투표"
+sweden.50.d:0 "우리 사회주의 정부는 국왕이 오늘날처럼 많은 영향력을 유지하도록 내버려두지 않을 것입니다. 그러나 우리는 국민 투표를 통해 스웨덴의 미래가 어디에 있는지 봐야 할 것입니다. 국왕 없는 공화정이 될 수도 있고, 아니면 진정한 입헌군주정이 될 수도 있습니다. 개표가 이뤄지면서 이번 국민투표는 어느 한쪽으로 쏠릴 수도 있을 것으로 보입니다."
+sweden.50.a:0 "국민들은 공화정을 원한다."
+sweden.50.b:0 "국민들은 입헌군주정을 원한다."
 
-sweden.51.t:0 "The Republican Amendment"
-sweden.51.d:0 "With the people voting on Sweden becoming a republic in the referendum, the time is to honor their choice. The amendment in the constitution is ready, and the liberals have accepted to vote with us. Finally, this institution of the past will be removed."
-sweden.51.a:0 "Long Live the Swedish Republic"
+sweden.51.t:0 "공화정 수정안"
+sweden.51.d:0 "국민투표에서 스웨덴이 공화국이 되는 것에 투표하는 사람들을 포함하여 국민들의 선택을 기리는 시간입니다. 헌법의 개정은 준비되었고, 진보주의자들은 우리와 함께 투표하는 것을 받아들였습니다. 마침내 과거의 군주제는 없어질 것입니다."
+sweden.51.a:0 "스웨덴 공화국 만세."
 
-sweden.52.t:0 "A Monarchy Ruled by the People"
+sweden.52.t:0 "인민이 통치하는 군주제"
 sweden.52.d:0 "With the people voting on Sweden being a constitutional monarchy, it shows that there are still confidence in the population for the monarchy. Nevertheless, we need to honor their choice, but the monarch's influence will be reduced."
-sweden.52.a:0 "It is What the People Wanted"
+sweden.52.a:0 "이것이 사람들이 원했던 것이다."
 
-sweden.53.t:0 "The Power of the King is Limited"
+sweden.53.t:0 "한정된 국왕의 권력"
 sweden.53.d:0 "Our liberal government have taken the choice to limit the power and influence of the king. If Sweden are supposed to be a democratic country, we should not have a monarch that hold on to powers that can overrule the people."
-sweden.53.a:0 "Now, We are a Democratic Country"
+sweden.53.a:0 "이제 우리는 민주주의 국가다."
 
-sweden.54.t:0 "Monarchs Power is Retained"
+sweden.54.t:0 "유지된 군주의 권력"
 sweden.54.d:0 "Socialists and liberals does always have something against our monarch. Therefore, we as conservatives need to step up and protect the power and influence of the king. The king is supposed to be a tool that hinders extremist groups taking power in society."
 sweden.54.a:0 "The King is Important"
 
-sweden.55.t:0 "Socialists Rebels Against Our Actions"
+sweden.55.t:0 "우리의 행동에 반항하는 사회주의자들"
 sweden.55.d:0 "With our actions strengthening the power of the government, many socialists have rebelled against us. They see Sweden turning into a right-wing dictatorship, and wants to hinder that becoming a reality. This might even become more violent than the post-election time was."
-sweden.55.a:0 "That's Not Good News"
+sweden.55.a:0 "좋은 소식이 아니다."
 
-sweden.56.t:0 "A Swedish Civil War"
+sweden.56.t:0 "스웨덴 내전"
 sweden.56.d:0 "Socialists have now rissen up against the government. Already are western parts of Sweden, in Götaland and Skåne, under socialist control. We need to be ready to face this upcoming Swedish civil war. There are also a possibility that the socialists might take power, but if that happens, our government would fight back."
 sweden.56.a:0 "We Are Loyal to the Crown!"
 sweden.56.b:0 "For the People! For Freedom!"
 
-sweden.57.t:0 "Sweden Proposes Scandinavian Neutrality"
+sweden.57.t:0 "스웨덴이 스칸디나비아 중립을 제안하다"
 sweden.57.d:0 "Sweden have now proposed neutrality in Scandinavia. What will we say about it?"
 sweden.57.a:0 "We Say Yes!"
-sweden.57.b:0 "No, Sorry Sweden"
+sweden.57.b:0 "아니, 스웨덴 미안."
 
-sweden.58.t:0 "Denmark Accepts Scandinavian Neutrality"
+sweden.58.t:0 "덴마크가 스칸디나비아 중립을 받아들이다"
 sweden.58.d:0 "Denmark have accepted our proposal of Scandinavian neutrality. Hopefully, this will mark the start of an era of peace and neutrality."
-sweden.58.a:0 "That's Great!"
+sweden.58.a:0 "훌륭해!"
 
 sweden.59.t:0 "Denmark Refuses Scandinavian Neutrality"
 sweden.59.d:0 "Denmark have refused our proposal of Scandinavian neutrality. They do not want to be a part of this neutrality."
-sweden.59.a:0 "At Least we Tried"
+sweden.59.a:0 "적어도 우리는 노력했다."
 
 sweden.60.t:0 "Sweden Proposes Scandinavian Neutrality"
 sweden.60.d:0 "Sweden have now proposed neutrality in Scandinavia. What will we say about it?"
 sweden.60.a:0 "We Say Yes!"
-sweden.60.b:0 "No, Sorry Sweden"
+sweden.60.b:0 "아니, 스웨덴 미안."
 
 sweden.61.t:0 "Norway Accepts Scandinavian Neutrality"
 sweden.61.d:0 "Norway have accepted our proposal of Scandinavian neutrality. Hopefully, this will mark the start of an era of peace and neutrality."
-sweden.61.a:0 "That's Great!"
+sweden.61.a:0 "훌륭해!"
 
 sweden.62.t:0 "Norway Refuses Scandinavian Neutrality"
 sweden.62.d:0 "Norway have refused our proposal of Scandinavian neutrality. They do not want to be a part of this neutrality."
-sweden.62.a:0 "At Least we Tried"
+sweden.62.a:0 "적어도 우리는 노력했다."
 
-sweden.63.t:0 "Sweden Wants to Join Our Alliance"
+sweden.63.t:0 "우리 동맹에 가입을 원하는 스웨덴"
 sweden.63.d:0 "A Swedish diplomat have arrived London with the request that Sweden can join our alliance. It would be great with an ally in Northern Europe, but the argument that we do not need their help is also out there."
-sweden.63.a:0 "Of Course!"
-sweden.63.b:0 "We Do not Need Them.."
+sweden.63.a:0 "물론이다!"
+sweden.63.b:0 "우리는 그들이 필요 없다.."
 
-sweden.64.t:0 "Britian Invites us Into Their Alliance"
+sweden.64.t:0 "영국이 우리를 동맹에 초대하다"
 sweden.64.d:0 "The British have welcomed us into their alliance. This will mark the start of good relations between Stockholm and London."
-sweden.64.a:0 "Long Live Our Alliance!"
+sweden.64.a:0 "우리의 동맹 만세!"
 
 sweden.65.t:0 "Britain Refuses Our Enterance into Their Alliance"
 sweden.65.d:0 "The British have taken the choice to say no to us joining their alliance. While it is surprisingly, it is also sad that they do not want Sweden as an ally."
-sweden.65.a:0 "That's No Good!"
+sweden.65.a:0 "좋지 않다!"
 
 sweden.66.t:0 "Sweden Wants to Join Our Alliance"
 sweden.66.d:0 "A Swedish diplomat have arrived Berlin with the request that Sweden can join our alliance. It would be great with an ally in Northern Europe, but the argument that we do not need their help is also out there."
-sweden.66.a:0 "Of Course!"
-sweden.66.b:0 "We Do not Need Them.."
+sweden.66.a:0 "물론이다!"
+sweden.66.b:0 "우리는 그들이 필요 없다.."
 
 sweden.67.t:0 "The Germans Invites us Into Their Alliance"
 sweden.67.d:0 "The Germans have welcomed us into their alliance. This will mark the start of good relations between Stockholm and Berlin."
-sweden.67.a:0 "Long Live Our Alliance!"
+sweden.67.a:0 "우리의 동맹 만세!"
 
 sweden.68.t:0 "The Germans Refuses Our Enterance into Their Alliance"
 sweden.68.d:0 "The Germans have taken the choice to say no to us joining their alliance. While it is surprisingly, it is also sad that they do not want Sweden as an ally."
-sweden.68.a:0 "That's No Good!"
+sweden.68.a:0 "좋지 않다!"
 
-sweden.70.t:0 "Anti-Government Rebellions Becomes More Frequent"
+sweden.70.t:0 "반정부 반란이 잦아지다"
 sweden.70.d:0 "Rebellions in our country have become more frequent. While this might be because of our citizens being unhappy, there might also lie outside interferrence. Some have suspected Sweden."
 sweden.70.a:0 "Can it be because of the Swedes?"
 
-sweden.71.t:0 "Anti-Government Rebellions Becomes More Frequent"
+sweden.71.t:0 "반정부 반란이 잦아지다"
 sweden.71.d:0 "Rebellions in our country have become more frequent. While this might be because of our citizens being unhappy, there might also lie outside interferrence. Some have suspected Sweden."
 sweden.71.a:0 "Can it be because of the Swedes?"
 
-sweden.72.t:0 "Sweden Pushes Pro-Unionist Ideas in Norway"
+sweden.72.t:0 "노르웨이에서 친연합주의 발상을 밀어붙이는 스웨덴"
 sweden.72.d:0 "Sweden have now begun to push pro-unionist ideas in Norway. With the fear of war hanging over our heads, more people have taken the position that it would be best with peace in a new union then war in Scandinavia."
-sweden.72.a:0 "No Way we Are Going into the Union Again!"
+sweden.72.a:0 "다시는 연합할 수 없다!"
 
-sweden.73.t:0 "Sweden Demands a New Swedish-Norwegian Union"
+sweden.73.t:0 "스웨덴이 새로운 스웨덴-노르웨이 연합을 요구하다"
 sweden.73.d:0 "Sweden have now send us the demand for Norway to join into a new Swedish-Norwegian union. With their propaganda being sent across the border, there are those Norwegians that actually supports this. While it would prevent war to say yes, there are many that believes Norway have to decline this proposal. Even if it would bring war between the two countries."
-sweden.73.a:0 "We Will Fight for our Freedom"
-sweden.73.b:0 "A Union Might be the Best Solution"
+sweden.73.a:0 "우리는 자유를 위해 싸울 것이다."
+sweden.73.b:0 "연합이 최상의 해결책일 수도 있다."
 
-sweden.74.t:0 "Norway Accepts the Union Proposal"
+sweden.74.t:0 "노르웨이가 연합 제안을 받아들이다"
 sweden.74.d:0 "Norway have choosen to accept the union proposal. While many Norwegian nationalists are outraged over this, there are close to equally so many that celebrates this achievement."
 sweden.74.a:0 "Long Live the Union"
 
-sweden.75.t:0 "Norway Refuses the Union Proposal"
+sweden.75.t:0 "노르웨이가 연합 제안을 거절하다"
 sweden.75.d:0 "Norway have choosen to reject the union proposal. They have taken the choice that they will much rather stay independent and stubborn, than to embrace the peaceful way of union."
-sweden.75.a:0 "War Will Settle This Then"
+sweden.75.a:0 "전쟁이 이 문제를 해결해 줄 것이다."
 
-sweden.76.t:0 "Sweden Proposes a Division of Denmark"
+sweden.76.t:0 "스웨덴이 덴마크의 분할을 제안하다"
 sweden.76.d:0 "Sweden have proposed a division of Denmark. In this plan of theirs, they will get Sjælland, Fyn, Northern Jylland and the north atlantic, while we will get Southern Jylland. While this would asure us that we gain the territories Germany lost to Denmark, it would let Sweden off with the rest."
 sweden.76.a:0 "Yes. With Swedish Help, We Can Retake Lost Land"
-sweden.76.b:0 "No. We Want to Face Denmark Alone"
+sweden.76.b:0 "아니. 우리는 덴마크를 홀로 상대하고 싶다."
 
-sweden.77.t:0 "The Germans Accepted the Plan"
+sweden.77.t:0 "독일이 계획을 받아들이다"
 sweden.77.d:0 "The Germans have taken the choice to accept our plan. Now, with the plan in place, it is ready to be enacted."
 sweden.77.a:0 "Excellent."
 
-sweden.78.t:0 "The Germans Refused the Plan"
+sweden.78.t:0 "독일이 계획을 거절하다"
 sweden.78.d:0 "The Germans have taken the choice to reject our plan. While it is disappointing, we will be able to face Denmark alone."
 sweden.78.a:0 "We Don't Need Them When Facing Denmark"
 
@@ -227,14 +227,14 @@ sweden.80.t:0 "A Call to Arms"
 sweden.80.d:0 "With us accepting the Swedish plan to divide Denmark, we are obligated to come to their aid."
 sweden.80.a:0 "We Will Hounour Our Agreement"
 
-sweden.83.t:0 "Invasion is Over!"
-sweden.83.d:0 "The invasion of Denmark is over. Now it is ready to distribute land as we and the Germans agreed to."
-sweden.83.a:0 "The Division Plan Shall be Upheld!"
+sweden.83.t:0 "침공이 끝났다!"
+sweden.83.d:0 "덴마크 침공은 끝났습니다. 이제 우리와 독일이 합의한 대로 토지를 분배할 준비가 되었습니다."
+sweden.83.a:0 "분할 계획은 유지되어야 한다!"
 
-sweden.81.t:0 "Norway Under Swedish Control"
+sweden.81.t:0 "스웨덴 지배하의 노르웨이"
 sweden.81.d:0 "Norway is once again under Swedish control. We will finally be able to take revenge for the murder of king Karl XII."
-sweden.81.a:0 "Long Live the Swedish Empire!"
+sweden.81.a:0 "스웨덴 제국 만세!"
 
-sweden.82.t:0 "Denmark Under Swedish Control"
-sweden.82.d:0 "Denmark is now under Swedish control. There is finally no other Scandinavian power strong enought to challenge our might."
-sweden.82.a:0 "Long Live the Swedish Empire!"
+sweden.82.t:0 "스웨덴 지배 하의 덴마크"
+sweden.82.d:0 "덴마크는 지금 스웨덴의 지배하에 있습니다. 마침내 우리의 힘에 도전할 다른 강력한 스칸디나비아의 힘이 없습니다."
+sweden.82.a:0 "스웨덴 제국 만세!"
