--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -65,8 +65,8 @@
  LOADING_TIP_71:0 "내 생각에는 너무 멀리 있는 다리까지 가려고 한 것 같소.\n - 프레드릭 브라우닝 (마켓 가든 작전의 개시 전)"
  LOADING_TIP_72:0 "하느님, 프랑스군을 구해주셔서 감사합니다.\n-  윈스턴 처칠, 1933년"
  LOADING_TIP_73:0 "공격을 하려는 방울뱀을 보았다면, 정말 뱀이 덮쳐올 때까지 기다리지 않을 것이다.\n- 프랭클린 D. 루스벨트"
- LOADING_TIP_74:0 "규칙이 반드시 신성한 것은 아니다.\n- 프랭클린 D. 루즈벨트"
- LOADING_TIP_75:0 "굶주리고 직업이 없는 국민은 독재가 시행될 구실이 된다.\n- 프랭클린 D. 루즈벨트"
+ LOADING_TIP_74:0 "규칙이 반드시 신성한 것은 아니다.\n- 프랭클린 D. 루스벨트"
+ LOADING_TIP_75:0 "굶주리고 직업이 없는 국민은 독재가 시행될 구실이 된다.\n- 프랭클린 D. 루스벨트"
  LOADING_TIP_76:0 "살고 싶으면 경계를 게을리 마라. 안 그러면, 독일군 개자식들이 소리없이 배후로 다가와 죽도록 두들겨 팰 테니까.\n- 조지 S. 패튼"
  LOADING_TIP_77:0 "군인들에게 조국을 지키고 있다는 의식이 없다면, 요새, 대포, 대외원조 같은 것은 아무런 의미가 없다.\n- 카를 구스타프 에밀 만네르하임"
  LOADING_TIP_78:0 "진흙과 피를 헤쳐 저 너머 푸른 들로 가자.\n- 왕립 캐나다 기갑 군단의 표어"
