--- a/localisation/usa_focus_l_english.yml
+++ b/localisation/usa_focus_l_english.yml
@@ -80,7 +80,7 @@
  US_establish_state_food:0 "국가 식량 공급책"
  US_establish_state_food_desc:0 "기근은 거의 끝났고 다시는 이런 일이 일어나지 않도록 하기 위해서 우리는 국가 기반의 공급품을 만들어야 합니다. 그래야 주 정부가 필요로 하는 잉여 물자를 계속 유지할 수 있습니다."
  US_civilian_conservation:0 "민간자원보존단"
- US_civilian_conservation_desc:0 "민간자원보존단 아이디어는 1932년 루즈벨트 주지사가 그의 선거 운동에서 제안했습니다. 이제 우리는 이 우울증을 끝내려면 이 아이디어를 실행해야 합니다."
+ US_civilian_conservation_desc:0 "민간자원보존단 아이디어는 1932년 루스벨트 주지사가 그의 선거 운동에서 제안했습니다. 이제 우리는 이 우울증을 끝내려면 이 아이디어를 실행해야 합니다."
  US_make_america_great:0 "미국을 다시 위대하게!"
  US_make_america_great_desc:0 "미국은 대전 전에는 위대한 강국으로 여겨졌지만, 협상국을 돕지 못한 것이 우리의 지위를 해쳤고, 우리의 지위가 더욱 쇠퇴한 이후로, 이제 우리는 그 어느 때보다도 더 위대해져 세계 최대의 강국으로서 정당한 지위를 차지해야 합니다."
  US_end_depression:0 "1932년 대공황의 종결"
@@ -150,7 +150,7 @@
  US_cas_effort:0 "더글러스와 접촉"
  US_cas_effort_desc:0 "적이 공격해오기 전에 격추할 수 있다면 수백만 명의 목숨을 구할 수 있습니다."
  US_navy:0 "해군 현대화"
- US_navy_desc:0 "미 해군은 프랭클린 루즈벨트 주지사가 윌슨 전 대통령 당시 해군 차관보를 지낸 이후 신규 선박이 거의 없었습니다. 미국이 근대 강국이 되려면 미 해군의 신속한 현대화가 필요합니다."
+ US_navy_desc:0 "미 해군은 프랭클린 루스벨트 주지사가 윌슨 전 대통령 당시 해군 차관보를 지낸 이후 신규 선박이 거의 없었습니다. 미국이 근대 강국이 되려면 미 해군의 신속한 현대화가 필요합니다."
  US_dockyards_2:0 "브루클린 해군 조선소 확장"
  US_dockyards_2_Dec:0 "브루클린 해군 조선소는 오랫동안 해군에서 가장 훌륭하고 악명 높은 선박들을 건조했습니다. 조선소를 확장함으로써 앞으로 수십 년 동안 충분히 대비할 수 있도록 함대를 개선할 수 있습니다."
  US_new_designer:0 "해군 설계 계약"
