--- a/localisation/usa_events_l_english.yml
+++ b/localisation/usa_events_l_english.yml
@@ -45,24 +45,24 @@
  usa.8.a:0 "민주당!"
  usa.8.b:0 "공화당!"
 
- usa.9.t:0 "루즈벨트 대 듀이"
- usa.9.d:0 "프랭클린 D. 루즈벨트의 대통령직은 이미 여러 가지 면에서 파격적이었습니다. 건강 악화와 역대 대통령 중 가장 오랜 재임 기간에도 불구하고, 그는 전쟁에 대한 노력을 통해 우리나라를 계속 이끌기를 열망하고 있습니다. 공화당은 전쟁에 참전할 가능성이 있는 많은 후보들로 인해 후보 선택에 제한을 받았지만, 주지사 토마스 E. 듀이를 그들의 대표로 선택했습니다.\n\n루즈벨트는 계속해서 대중의 지지를 받고 있지만, 많은 사람들은 루즈벨트가 임기 말까지는 살지 못할 수도 있다고 의심하고 있습니다. 하지만 이 정도로 듀이가 우리를 여기까지 이끈 루즈벨트로부터 승리를 얻기가 충분할까요?"
- usa.9.a:0 "루즈벨트가 듀이를 이긴다."
- usa.9.b:0 "듀이가 루즈벨트를 이긴다."
- usa.10.t:0 "[Root.GetLeader] 대 루즈벨트"
- usa.10.d:0 "비록 뉴딜의 많은 측면들이 [Root.GetLeader]에 의해 유지되었지만, 루즈벨트는 여전히 프로그램의 지속적인 개발을 위한 자신의 원래 계획을 현실로 만들 기회를 보고 있습니다. 건강이 악화되었음에도 불구하고, 그는 이전에 대통령직에 오르게 했던 많은 지지를 간신히 유지했고, 현재 다시 민주당을 위해 선거운동을 하고 있습니다.\n\n[Root.GetLeader]은(는) 미국의 민감한 상황에서 지도자를 바꾸는 것은 무책임한 일이라고 주장하고 있는데, 이는 루즈벨트에 대한 이전 승리 이전에 같은 주장이 나왔기 때문에 다소 아이러니한 일입니다. 그럼에도 불구하고, 그는 일리가 있을지도 모릅니다."
+ usa.9.t:0 "루스벨트 대 듀이"
+ usa.9.d:0 "프랭클린 D. 루스벨트의 대통령직은 이미 여러 가지 면에서 파격적이었습니다. 건강 악화와 역대 대통령 중 가장 오랜 재임 기간에도 불구하고, 그는 전쟁에 대한 노력을 통해 우리나라를 계속 이끌기를 열망하고 있습니다. 공화당은 전쟁에 참전할 가능성이 있는 많은 후보들로 인해 후보 선택에 제한을 받았지만, 주지사 토마스 E. 듀이를 그들의 대표로 선택했습니다.\n\n루스벨트는 계속해서 대중의 지지를 받고 있지만, 많은 사람들은 루스벨트가 임기 말까지는 살지 못할 수도 있다고 의심하고 있습니다. 하지만 이 정도로 듀이가 우리를 여기까지 이끈 루스벨트로부터 승리를 얻기가 충분할까요?"
+ usa.9.a:0 "루스벨트가 듀이를 이긴다."
+ usa.9.b:0 "듀이가 루스벨트를 이긴다."
+ usa.10.t:0 "[Root.GetLeader] 대 루스벨트"
+ usa.10.d:0 "비록 뉴딜의 많은 측면들이 [Root.GetLeader]에 의해 유지되었지만, 루스벨트는 여전히 프로그램의 지속적인 개발을 위한 자신의 원래 계획을 현실로 만들 기회를 보고 있습니다. 건강이 악화되었음에도 불구하고, 그는 이전에 대통령직에 오르게 했던 많은 지지를 간신히 유지했고, 현재 다시 민주당을 위해 선거운동을 하고 있습니다.\n\n[Root.GetLeader]은(는) 미국의 민감한 상황에서 지도자를 바꾸는 것은 무책임한 일이라고 주장하고 있는데, 이는 루스벨트에 대한 이전 승리 이전에 같은 주장이 나왔기 때문에 다소 아이러니한 일입니다. 그럼에도 불구하고, 그는 일리가 있을지도 모릅니다."
  usa.10.a:0 "[Root.GetLeader]은(는) 유능한 지도자로 증명되었다."
  usa.10.b:0 "미국은 새로운 뉴 딜에 준비가 됬다."
- usa.11.t:0 "루즈벨트 vs 맥아더"
- usa.11.d:0 "전쟁에 말려들 것이라는 위협이 계속되면서 민주당과 공화당 모두 군 출신 후보를 찾기를 열망했습니다. 평소 국방의 의무를 다했던 더글러스 맥아더 장군은 우리나라가 평화롭고 승리하는 동안 공화당 공천을 위한 선거운동을 할 기회를 잡았습니다. 그는 지금 보수 연합을 지지하면서 루즈벨트에 도전하고 있습니다.\n\n루즈벨트는 계속 인기를 끌고 있지만, 맥아더의 카리스마와 사명감이 유권자들에게 강한 인상을 남겼습니다. 군인이 정말 최선을 알 것 같습니까?"
- usa.11.a:0 "루즈벨트와 트루먼이 해낼 것이다."
+ usa.11.t:0 "루스벨트 vs 맥아더"
+ usa.11.d:0 "전쟁에 말려들 것이라는 위협이 계속되면서 민주당과 공화당 모두 군 출신 후보를 찾기를 열망했습니다. 평소 국방의 의무를 다했던 더글러스 맥아더 장군은 우리나라가 평화롭고 승리하는 동안 공화당 공천을 위한 선거운동을 할 기회를 잡았습니다. 그는 지금 보수 연합을 지지하면서 루스벨트에 도전하고 있습니다.\n\n루스벨트는 계속 인기를 끌고 있지만, 맥아더의 카리스마와 사명감이 유권자들에게 강한 인상을 남겼습니다. 군인이 정말 최선을 알 것 같습니까?"
+ usa.11.a:0 "루스벨트와 트루먼이 해낼 것이다."
  usa.11.b:0 "맥아더는 전쟁만큼이나 평화로운 사람이다."
  usa.12.t:0 "더글러스 맥아더의 선거운동"
  usa.12.d:0 "루스벨트의 기록에 남을 만한 장기 대통령직에 도전하기 위해, 공화당은 이 전쟁을 통해 미국을 이끌 잠재적 후보를 찾기를 희망하며 존경받는 군 지휘관들을 찾았습니다. 더글러스 맥아더 장군은 그동안 보수 진영에서 인기 있는 후보였지만, 현재 진행 중인 갈등에서 없어서는 안 될 자산이기도 하고, 대통령 선거운동을 하면서 시간을 보내는 것도 꺼려왔습니다.\n\n그럼에도 불구하고 그는 여전히 더 유망한 보수 후보 중 한 명으로 남아 있으며 아마도 중도 공화당의 대통령이 되는 것을 피하기 위해 선거운동을 할 것이라고 확신할 수 있을 것입니다. 희생할 만한 가치가 있나요?"
  usa.12.a:0 "맥아더는 백악관보다 최전선에서 더 필요하다."
- usa.12.b:0 "맥아더는 루즈벨트에 도전하기 위해서 필요하다."
- usa.13.t:0 "루즈벨트의 서거"
- usa.13.d:0 "비록 루즈벨트 대통령의 건강은 한동안 하락하고 있지만, 그의 강력한 대선 운동은 많은 사람들에게 그가 수년이 남았다고 확신시켰습니다. 하지만, 아직 재직 중 루즈벨트의 사망 가능성은 여전했고, 오늘은 뇌졸중으로 쓰러진 뒤 세상을 떠났습니다. 해리 S. 트루먼 부통령은 이제 국민의 지지와 기도를 요청하며 취임 선서를 했습니다. 낡은 내각이 남아 있고 트루먼은 전임자의 많은 정책을 계속하겠다고 다짐했습니다."
+ usa.12.b:0 "맥아더는 루스벨트에 도전하기 위해서 필요하다."
+ usa.13.t:0 "루스벨트의 서거"
+ usa.13.d:0 "비록 루스벨트 대통령의 건강은 한동안 하락하고 있지만, 그의 강력한 대선 운동은 많은 사람들에게 그가 수년이 남았다고 확신시켰습니다. 하지만, 아직 재직 중 루스벨트의 사망 가능성은 여전했고, 오늘은 뇌졸중으로 쓰러진 뒤 세상을 떠났습니다. 해리 S. 트루먼 부통령은 이제 국민의 지지와 기도를 요청하며 취임 선서를 했습니다. 낡은 내각이 남아 있고 트루먼은 전임자의 많은 정책을 계속하겠다고 다짐했습니다."
  usa.13.a:0 "그래서 한 시대가 끝나고, 또 다른 시대가 시작되었다."
 
  ###Elections events 
