추가 번역 및 번역 수정
앞으로 업데이트 시에 버전 올림을 하지 않도록 하겠습니다. 어차피 한글패치 버전은 다르더라도 문제가 없을 것 같네요.

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -45,7 +45,7 @@
  falangism_desc:0 "파시즘과 보수주의의 특성을 가지고 있는 권위주의 이념인 팔랑헤주의는, 국가와 가톨릭 정체성에 가치를 두고 있습니다."
  rexism:0 "렉시즘"
  rexism_desc:0 "자유주의와 공산주의 이념 모두 강하게 반대하는 렉시즘은, 철저히 보수적인 민족주의 운동으로서 조합주의적 경제 정책을 옹호합니다. 대중주의와 권위주의적 수사법으로 목소리를 높이며, 다른 파시스트 운동에 가까운 형태로 전환되는 이념입니다."
- neutrality:0 "온정주의적 전제주의"
+ neutrality:0 "후견전제주의"
  neutrality_desc:0 "권위주의 체제"
  neutrality_noun:0 "권위주의"
  despotism:0 "전제정"
@@ -578,9 +578,9 @@
  GEO_democratic_party:0 "조지아 사회민주당"
  GEO_communism_party:0 "조지아 공산당"
  GEO_neutrality_party:0 "조지아 대회"
- KAZ_fascism_party:0 "Zhuze Ultşildiq"
- KAZ_democratic_party:0 "Alash Party"
- KAZ_communism_party:0 "Communist Party of Kazakhstan"
+ KAZ_fascism_party:0 "부족주의 연합"
+ KAZ_democratic_party:0 "알라시당"
+ KAZ_communism_party:0 "카자흐스탄 공산당"
  KAZ_neutrality_party:0 "왕당파"
  AZR_fascism_party:0 "화마군벌"
  AZR_democratic_party:0 "뮈사바트(평등당)"
