--- a/localisation/usa_events_l_english.yml
+++ b/localisation/usa_events_l_english.yml
@@ -50,8 +50,8 @@
  usa.9.a:0 "루스벨트가 듀이를 이긴다."
  usa.9.b:0 "듀이가 루스벨트를 이긴다."
  usa.10.t:0 "[Root.GetLeader] 대 루스벨트"
- usa.10.d:0 "비록 뉴딜의 많은 측면들이 [Root.GetLeader]에 의해 유지되었지만, 루스벨트는 여전히 프로그램의 지속적인 개발을 위한 자신의 원래 계획을 현실로 만들 기회를 보고 있습니다. 건강이 악화되었음에도 불구하고, 그는 이전에 대통령직에 오르게 했던 많은 지지를 간신히 유지했고, 현재 다시 민주당을 위해 선거운동을 하고 있습니다.\n\n[Root.GetLeader]은(는) 미국의 민감한 상황에서 지도자를 바꾸는 것은 무책임한 일이라고 주장하고 있는데, 이는 루스벨트에 대한 이전 승리 이전에 같은 주장이 나왔기 때문에 다소 아이러니한 일입니다. 그럼에도 불구하고, 그는 일리가 있을지도 모릅니다."
- usa.10.a:0 "[Root.GetLeader]은(는) 유능한 지도자로 증명되었다."
+ usa.10.d:0 "비록 뉴딜의 많은 측면들이 [Root.GetLeader]에 의해 유지되었지만, 루스벨트는 여전히 프로그램의 지속적인 개발을 위한 자신의 원래 계획을 현실로 만들 기회를 보고 있습니다. 건강이 악화되었음에도 불구하고, 그는 이전에 대통령직에 오르게 했던 많은 지지를 간신히 유지했고, 현재 다시 민주당을 위해 선거운동을 하고 있습니다.\n\n[Root.GetLeader]의 주장은 미국의 민감한 상황에서 지도자를 바꾸는 것이 무책임하다는 것인데, 이는 루스벨트에 대한 이전 승리 이전에 같은 주장이 나왔기 때문에 다소 아이러니한 일입니다. 그런데도, 그의 말이 일리가 있을지도 모릅니다."
+ usa.10.a:0 "[Root.GetLeader], 이 자는 유능한 지도자로 증명되었다."
  usa.10.b:0 "미국은 새로운 뉴 딜에 준비가 됬다."
  usa.11.t:0 "루스벨트 vs 맥아더"
  usa.11.d:0 "전쟁에 말려들 것이라는 위협이 계속되면서 민주당과 공화당 모두 군 출신 후보를 찾기를 열망했습니다. 평소 국방의 의무를 다했던 더글러스 맥아더 장군은 우리나라가 평화롭고 승리하는 동안 공화당 공천을 위한 선거운동을 할 기회를 잡았습니다. 그는 지금 보수 연합을 지지하면서 루스벨트에 도전하고 있습니다.\n\n루스벨트는 계속 인기를 끌고 있지만, 맥아더의 카리스마와 사명감이 유권자들에게 강한 인상을 남겼습니다. 군인이 정말 최선을 알 것 같습니까?"
