--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -148,7 +148,7 @@
  prussia.111.a:0 "좋지 않다..."
  prussia.111.b:0 "독일 친구들을 위해 건배!"
  prussia.110.t:0 "쾨니히 조약"
- prussia.110.d:0 "독일 외무부가 양국 간 불가침 협정을 제안했습니다. 이 조약은 우리의 상호 무역을 크게 증가시킬 것이며, 추가적인 비밀 의정서는 발칸 반도를 독일과 러시아의 세력권으로 분할하는 것을 제안합니다.\n\n베를린의 파시스트들은 믿을 수 없지만, 이번 협정은 우리가 외부의 간섭을 두려워하지 않고 루마니아, 불가리아, 일본을 상대할 수 있게 해줄 것입니다."
+ prussia.110.d:0 "독일 외무부가 양국 간 불가침 협정을 제안했습니다. 이 조약은 우리의 상호 무역을 크게 증가시킬 것이며, 추가적인 비밀 의정서는 발칸반도를 독일과 러시아의 세력권으로 분할하는 것을 제안합니다.\n\n베를린의 파시스트들은 믿을 수 없지만, 이번 협정은 우리가 외부의 간섭을 두려워하지 않고 루마니아, 불가리아, 일본을 상대할 수 있게 해줄 것입니다."
  prussia.110.a:0 "조약에 서명하라."
  prussia.110.b:0 "싫다."
  prussia.112.t:0 "모스크바가 조약에 서명하다"
@@ -170,7 +170,7 @@
  prussia.115.a:0 "누가 오스트리아가 독일이 아니라고 말할 수 있는가?!"
  ####### NEWS ######
  prussia.10000.t:0 "독일 통일"
- prussia.10000.d:0 "오늘 오전 프로이센 외무부는 독일의 통일 절차가 완료되었으며 새로운 독일이 선포됐다고 발표했습니다. 일부 사람들은 독일이 다시 강대국이 되는 것을 막기 위해 1917년 협상국에 의해 해체된 독일 제국이 부상하는 것을 두려워합니다. [GER.GetLeader]은(는) 통일을 "민주 정권 하에서 독일 국민들을 회복하고 재결합시키기 위한 필수적인 조치"라고 정당화했습니다."
+ prussia.10000.d:0 "오늘 오전 프로이센 외무부는 독일의 통일 절차가 완료되었으며 새로운 독일이 선포됐다고 발표했습니다. 일부 사람들은 독일이 다시 강대국이 되는 것을 막기 위해 1917년 협상국에 의해 해체된 독일 제국이 부상하는 것을 두려워합니다. [GER.GetLeader] 측은 통일을 "민주 정권 하에서 독일 국민들을 회복하고 재결합시키기 위한 필수적인 조치"라고 정당화했습니다."
  prussia.10000.a:0 "계속해서 상황을 예의주시해야 할 것 같다."
  prussia.10000.b:0 "독일 제국 만세!"
  prussia.10000.c:0 "제국에게 죽음을!"
