--- a/localisation/tur_events_l_english.yml
+++ b/localisation/tur_events_l_english.yml
@@ -109,93 +109,93 @@
  ottoman.25.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.25.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.25.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.26.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.26.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.26.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.26.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.26.a:0 "승리다!"
- ottoman.27.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.27.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.27.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.27.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.27.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.27.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.28.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.28.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.28.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.28.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.29.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.29.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.29.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.29.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.29.a:0 "승리다!"
- ottoman.30.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.30.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.30.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.30.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.30.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.30.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.31.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.31.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.31.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.31.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.32.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.32.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.32.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.32.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.32.a:0 "승리다!"
- ottoman.33.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.33.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.33.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.33.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.33.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.33.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.34.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.34.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.34.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.34.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.35.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.35.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.35.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.35.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.35.a:0 "승리다!"
- ottoman.36.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.36.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.36.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.36.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.36.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.36.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.37.t:0 "오스만은 우리 문 앞에 있다."
- ottoman.37.d:0 "오스만 제국이 최근 발칸 반도에 밀어닥쳐 우리 이웃을 삼켜버렸습니다. 이제 그들은 우리 정부와 유전들에 대한 통제를 요구합니다. 어떻게 진행하면 좋겠습니까?"
+ ottoman.37.d:0 "오스만 제국이 최근 발칸반도에 밀어닥쳐 우리 이웃을 삼켜버렸습니다. 이제 그들은 우리 정부와 유전들에 대한 통제를 요구합니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.37.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.37.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.38.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.38.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.38.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.38.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.38.a:0 "완전한 합병을 요구하라."
  ottoman.38.b:0 "해안을 합병하고 꼭두각시를 세워라."
- ottoman.39.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.39.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.39.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.39.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.39.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.39.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.40.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.40.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.40.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.40.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.41.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.41.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.41.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.41.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.41.a:0 "승리다!"
- ottoman.42.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.42.d:0 "[From.GetAdjective]이(가) 우리 제안을 거부하다"
- ottoman.42.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.42.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.42.d:0 "[From.GetAdjective] 측이 우리 제안을 거부하다"
+ ottoman.42.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.43.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.43.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.43.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.43.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.44.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.44.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.44.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.44.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.44.a:0 "승리다!"
- ottoman.45.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.45.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.45.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.45.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.45.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.45.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  ottoman.46.t:0 "오스만이 우리의 합병을 요구하다"
  ottoman.46.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.46.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.46.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.47.t:0 "[From.GetName]이(가) 굴복하다"
- ottoman.47.d:0 "약한 [From.GetAdjective]은(는) 우리 군대의 힘 앞에 무너졌습니다."
+ ottoman.47.t:0 "[From.GetName] 측이 굴복하다"
+ ottoman.47.d:0 "약한 [From.GetAdjective] 측은 우리 군대의 힘 앞에 무너졌습니다."
  ottoman.47.a:0 "승리다!"
- ottoman.48.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.48.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.48.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다. "
+ ottoman.48.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.48.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.48.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다. "
  ottoman.49.t:0 "코카서스 지역과 광대한 스텝을 요구하는 오스만족"
  ottoman.49.d:0 "오스만 제국은 지금 우리가 정복한 이슬람 땅을 요구하고 있습니다. 만약 이 거래를 받아들인다면 우리는 엄청난 양의 자원과 많은 대중들의 중심지를 잃게 될 것입니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.49.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.49.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
- ottoman.50.t:0 "[From.GetName]이(가) 굴복하다"
+ ottoman.50.t:0 "[From.GetName] 측이 굴복하다"
  ottoman.50.d:0 "한때 강했던 러시아 제국이 우리의 요구에 굴복했습니다! 오늘날 우리는 투르크인과 이슬람 인구를 모두 합쳤기 때문에 제국 전역에 걸쳐 승리 행진을 개시합니다."
  ottoman.50.a:0 "승리다!"
- ottoman.51.t:0 "[From.GetName]이(가) 요구를 거부하다"
- ottoman.51.d:0 "[From.GetAdjective]이(가) 우리 요구를 거부했습니다."
- ottoman.51.a:0 "[From.GetAdjective]은(는) 대가를 치룰 것이다."
+ ottoman.51.t:0 "[From.GetName] 측이 요구를 거부하다"
+ ottoman.51.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
+ ottoman.51.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
  rename.341.t:0 "이스탄불의 개명"
  rename.341.d:0 "이스탄불을 수복했으니, 다시 차르그라드로 이름을 바꾸든지, 아니면 그대로 놔두든지 둘 수 있습니다. 어떻게 해야 합니까?"
  rename.341.a:0 "이름을 바꿔라."
