--- a/localisation/POR_Portugal_l_english.yml
+++ b/localisation/POR_Portugal_l_english.yml
@@ -270,7 +270,7 @@ POR_red_army:0 "붉은 군대"
 POR_purges:0 "Consolidation of Power"
 POR_rising_party:0 "Movimento Nacional-Sindicalista"
 POR_defend:0 "Fighting for what you Love"
-POR_church:0 "카톨릭 지지"
+POR_church:0 "가톨릭 지지"
 POR_god_mil:0 "군사 선서"
 POR_manuel:0 "마누엘 2세"
 POR_diplo:0 "인상된 세금"
@@ -316,7 +316,7 @@ portu.5.d:0 "오후 3시, 라디오 채널들은 마누엘 2세의 연설을 생
 portu.5.a:0 "우리 국왕께 영광이 있기를 빈다!"
 
 portu.6.t:0 "포르투갈과 바티칸 사이의 새 협약이 체결되다"
-portu.6.d:0 "로마 가톨릭은 이 나라 정체성의 주요 부분입니다. 1822년 첫 헌법에서 우리는 공식적으로 가톨릭을 국교로 선포했습니다. 그러나 1910년 공화주의 혁명은 국가와 교회 사이의 몇몇 유대관계를 폐지했고 또한 비인간적인 방법으로 교회를 제한했습니다. 교회 재산은 압수되고 교육은 세속화되었을 뿐만 아니라, 공화국은 교회 타종, 길거리에서의 성직자의 의복 착용, 그리고 많은 인기 있는 종교 축제의 개최를 금지하기까지 했습니다. 살라자르 정부는 이러한 문제들을 개선했지만, 포르투갈에서 로마 가톨릭의 위상을 완전히 공고히 할 수는 없었습니다. 이 문제를 해결하기 위해 로마 가톨릭의 강력한 신자인 우리의 복권된 왕은 개인적으로 그 과제를 떠맡았습니다. 이제 교회와 국가 관계를 지배하는 새로운 협약이 포르투갈과 바티칸 사이에 체결되었습니다. 로마 카톨릭은 이제 다시 국교가 되었고, 게다가 제1공화국 동안 채택된 많은 반교회 정책들이 뒤집혔습니다. 마누엘 2세 왕은 특히 보수주의자들과 시골 지역들로부터 이러한 행동에 대한 찬사와 지지를 얻고 있습니다. 포르투갈과 카톨릭 교회는 수월하게 상호 보강된 방식으로 복원되었습니다. 우리 왕국이 그로 인해 번영하기를 바랍니다."
+portu.6.d:0 "로마 가톨릭은 이 나라 정체성의 주요 부분입니다. 1822년 첫 헌법에서 우리는 공식적으로 가톨릭을 국교로 선포했습니다. 그러나 1910년 공화주의 혁명은 국가와 교회 사이의 몇몇 유대관계를 폐지했고 또한 비인간적인 방법으로 교회를 제한했습니다. 교회 재산은 압수되고 교육은 세속화되었을 뿐만 아니라, 공화국은 교회 타종, 길거리에서의 성직자의 의복 착용, 그리고 많은 인기 있는 종교 축제의 개최를 금지하기까지 했습니다. 살라자르 정부는 이러한 문제들을 개선했지만, 포르투갈에서 로마 가톨릭의 위상을 완전히 공고히 할 수는 없었습니다. 이 문제를 해결하기 위해 로마 가톨릭의 강력한 신자인 우리의 복권된 왕은 개인적으로 그 과제를 떠맡았습니다. 이제 교회와 국가 관계를 지배하는 새로운 협약이 포르투갈과 바티칸 사이에 체결되었습니다. 로마 가톨릭은 이제 다시 국교가 되었고, 게다가 제1공화국 동안 채택된 많은 반교회 정책들이 뒤집혔습니다. 마누엘 2세 왕은 특히 보수주의자들과 시골 지역들로부터 이러한 행동에 대한 찬사와 지지를 얻고 있습니다. 포르투갈과 가톨릭 교회는 수월하게 상호 보강된 방식으로 복원되었습니다. 우리 왕국이 그로 인해 번영하기를 바랍니다."
 portu.6.a:0 "아멘, 신께서 포르투갈과 함께하신다."
 
 portu.7.t:0 "국왕에 대한 암살 시도!"
@@ -469,7 +469,7 @@ portu.39.a:0 "드디어 다시 투표할 권리가 생겼다!"
 portu.40.t:0 "살라자르의 선거 운동"
 portu.40.d:0 ""
 portu.40.a:0 "경기 호전을 보장하라."
-portu.40.b:0 "통일성과 카톨릭 이상을 찬양하라."
+portu.40.b:0 "통일성과 가톨릭 이상을 찬양하라."
 
 portu.41.t:0 "민주당이 조직되다"
 portu.41.d:0 ""
