--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -364,8 +364,8 @@
  BEL_communism_party_long:0 "벨기에 공산당"
  BEL_socialist_party:0 "벨기에 노동당"
  BEL_democratic_party:0 "자유당"
- BEL_conservatives_party:0 "카톨릭당"
- BEL_conservatives_party_long:0 "카톨릭당"
+ BEL_conservatives_party:0 "가톨릭당"
+ BEL_conservatives_party_long:0 "가톨릭당"
  BEL_neutrality_party:0 "왕당파"
  BEL_fascism_party:0 "VLB"
  BEL_fascism_party_long:0 "플람스 국가 연합"
