--- a/localisation/tur_events_l_english.yml
+++ b/localisation/tur_events_l_english.yml
@@ -15,7 +15,7 @@
  ottodome.4.c:0 "이스탄불은 터키인들의 진정한 수도다. (수도 천도)"
  ####### NEWS ######
  ottodome.99.t:0 "청년 튀르크 반란"
- ottodome.99.d:0 "콘스탄티노플 봉기 혹은 대부분의 사람들이 알고 있듯이, 청년 튀르크 반란은 터키의 러시아 점령지 전역에서 터키와 아랍의 반란자들에 의해 수행되었습니다. 아르메니아 비무장지대에서의 폭력사태가 증가하자, 많은 사람들이 예레반이나 트빌리시에서 난민을 희망하며 러시아 국경을 넘어 도망쳤습니다. 콘스탄티노플 정교회에 있는 동안 시민들은 보스포루스 해협에 던져지고 러시아 건물들은 불타버렸습니다. 러시아의 지도자 차르 니콜라스 2세는 '터키 국민들은 지역 소수민족에 대한 그들의 행동을 후회할 것입니다'라고 발언하였습니다. 많은 사람들은 이것을 러시아의 개혁과 현대화에 대한 필요성 때문에 공허한 위협으로 인식하고 있습니다."
+ ottodome.99.d:0 "콘스탄티노폴리스 봉기 혹은 대부분의 사람들이 알고 있듯이, 청년 튀르크 반란은 터키의 러시아 점령지 전역에서 터키와 아랍의 반란자들에 의해 수행되었습니다. 아르메니아 비무장지대에서의 폭력사태가 증가하자, 많은 사람들이 예레반이나 트빌리시에서 난민을 희망하며 러시아 국경을 넘어 도망쳤습니다. 콘스탄티노플 정교회에 있는 동안 시민들은 보스포루스 해협에 던져지고 러시아 건물들은 불타버렸습니다. 러시아의 지도자 차르 니콜라스 2세는 '터키 국민들은 지역 소수민족에 대한 그들의 행동을 후회할 것입니다'라고 발언하였습니다. 많은 사람들은 이것을 러시아의 개혁과 현대화에 대한 필요성 때문에 공허한 위협으로 인식하고 있습니다."
  ottodome.99.a:0 "유럽이 뜨거워지고 있다."
  ottodome.100.t:0 "압뒬메지트 2세가 칼리프로 즉위하다"
  ottodome.100.d:0 "오늘날 터키 정부는 오스만 제국의 30대 칼리프로서 왕위를 되찾기 위해 압뒬메지트 2세를 다시 초빙하였습니다. 많은 사람들이 압뒬메지트 2세를 온건파이자 예술과 문학의 후원자라고 생각하지만 많은 국가들은 여전히 터키가 초강대국으로 부상하는 것을 두려워하고 있습니다. 러시아는 아마도 오스만 침략에 대비하기 위해 불가리아나 그리스와 같은 발칸 국가에 손을 뻗치기 시작했을 것입니다."
